--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,17 @@
     <artifactId>httpclient</artifactId>
     <version>4.5.13</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.11.3</version>
+</dependency>
+<dependency>
+	<groupId>com.fasterxml.jackson.core</groupId>
+	<artifactId>jackson-databind</artifactId>
+	<version>2.11.3</version>
+</dependency>
   </dependencies>
   <build>
     <plugins>
